@@ -22,6 +22,7 @@ Changes in JMurmel-1.3 relative to JMurmel-1.2.2
 
  * fixed backquote expansion:
    e.g. `(a ,nil) was eval'd to (a); correct expansion is (a nil)
+ * fixed compiled jmethod
 
 
 Changes in JMurmel-1.2.2 relative to JMurmel-1.2.1
